[package]
name = "eth-address"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["xenowits <kumar.abhishek111b@gmail.com>"]
description = "Collection of methods for validating an Ethereum 1 address"
readme = "README.md"
keywords = ["crypto", "ethereum", "address"]
repository = "https://github.com/xenowits/eth-address"

[dependencies]
regex = "1"
anyhow = "1.0"
rust-crypto = "0.2"
